--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/neiliux/quasi-excerpt",
   "devDependencies": {
-    "grunt-bowercopy": "^1.2.0"
+    "grunt": "^0.4.5",
+    "grunt-bowercopy": "^1.2.0",
+    "grunt-devserver": "^0.6.0"
   }
 }
