--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
     "requirejs": "~2.1.15"
   },
   "devDependencies": {
-    "jasmine": "~2.2.1"
+    "jasmine": "~2.2.1",
+    "jquery": "~2.1.3",
+    "chai": "~1.10.0",
+    "chai-jquery": "~2.0.0"
   }
 }
