--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quasi-excerpt",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A framework for querying arbitrary CSS psuedo elements.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/neiliux/quasi-excerpt"
   },
-  "author": "",
+  "author": "Neil Breeden III <neil@htmlbuffet.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/neiliux/quasi-excerpt/issues"
