--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,10 @@
     "jquery": "~2.1.3",
     "chai": "~1.10.0",
     "chai-jquery": "~2.0.0"
-  }
+  },
+  "keywords": [
+    "CSS",
+    "javascript",
+    "pseudo"
+  ]
 }
