--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "quasi-excerpt",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/neiliux/quasi-excerpt",
   "authors": [
     "Neil Breeden III <neil@htmlbuffet.com>"
@@ -10,13 +10,18 @@
     "amd"
   ],
   "license": "MIT",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "bower.json",
+    "gruntfile.js",
+    "karma.conf.js",
+    "package.json",
+    "README.md"
   ],
   "dependencies": {
     "requirejs": "~2.1.15"
