--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bowercopy": "^1.2.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-devserver": "^0.6.0",
     "grunt-karma": "^0.10.1",
     "jasmine-core": "^2.2.0",
